--- a/exploring_data.ipynb
+++ b/exploring_data.ipynb
@@ -7,15 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "df = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/covtype/covtype.data.gz', names=range(0, 55))"
    ]
   },
@@ -1691,6 +1684,7 @@
     }
    ],
    "source": [
+    "# Label\n",
     "plt.hist(df[54], bins=7)\n",
     "plt.show()\n",
     "df[54].value_counts().sort_index()"
