Updated heuristic eval

--- a/heuristic_model/heuristic_model_eval.ipynb
+++ b/heuristic_model/heuristic_model_eval.ipynb
@@ -14,153 +14,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={0: \"elev\", 2: 'slope', 5: \"road_distance\", 54: 'label'})\n",
+    "labels = df['label'].values\n",
+    "features = df[['elev', 'slope', 'road_distance']].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = SimpleHeuristicModel()\n",
+    "predictions = model.predict(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>elev</th>\n",
-       "      <th>slope</th>\n",
-       "      <th>road_distance</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2596</td>\n",
-       "      <td>3</td>\n",
-       "      <td>510</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2590</td>\n",
-       "      <td>2</td>\n",
-       "      <td>390</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2804</td>\n",
-       "      <td>9</td>\n",
-       "      <td>3180</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2785</td>\n",
-       "      <td>18</td>\n",
-       "      <td>3090</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2595</td>\n",
-       "      <td>2</td>\n",
-       "      <td>391</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>581007</th>\n",
-       "      <td>2396</td>\n",
-       "      <td>20</td>\n",
-       "      <td>108</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>581008</th>\n",
-       "      <td>2391</td>\n",
-       "      <td>19</td>\n",
-       "      <td>95</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>581009</th>\n",
-       "      <td>2386</td>\n",
-       "      <td>17</td>\n",
-       "      <td>90</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>581010</th>\n",
-       "      <td>2384</td>\n",
-       "      <td>15</td>\n",
-       "      <td>90</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>581011</th>\n",
-       "      <td>2383</td>\n",
-       "      <td>13</td>\n",
-       "      <td>67</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>581012 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        elev  slope  road_distance  label\n",
-       "0       2596      3            510      5\n",
-       "1       2590      2            390      5\n",
-       "2       2804      9           3180      2\n",
-       "3       2785     18           3090      2\n",
-       "4       2595      2            391      5\n",
-       "...      ...    ...            ...    ...\n",
-       "581007  2396     20            108      3\n",
-       "581008  2391     19             95      3\n",
-       "581009  2386     17             90      3\n",
-       "581010  2384     15             90      3\n",
-       "581011  2383     13             67      3\n",
-       "\n",
-       "[581012 rows x 4 columns]"
+       "0.2973208814964235"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df.rename(columns={0: \"elev\", 2: 'slope', 5: \"road_distance\", 54: 'label'})\n",
-    "df = df[['elev', 'slope', 'road_distance', 'label']]\n",
-    "df"
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "accuracy_score(predictions, labels)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
