Fixed minor spelling error

--- a/deep_model/deep_classification.ipynb
+++ b/deep_model/deep_classification.ipynb
@@ -39483,7 +39483,7 @@
     }
    ],
    "source": [
-    "# Accuracy would definitly improve with biggest sample size\n",
+    "# Accuracy would definitly improve with bigger sample size\n",
     "# and hyperparameter grid search with bigger amount of variants\n",
     "# This is obviously only presentation, since I didn't have enough time for longer training.\n",
     "\n",
