--- a/models_evaluation.ipynb
+++ b/models_evaluation.ipynb
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "NN_result = accuracy_score(np.round(NN_pred), y_encoded)\n",
-    "NN_confusion = confusion_matrix(np.round(NN_pred).argmax(axis=1), y_encoded.argmax(axis=1))\n"
+    "NN_confusion = confusion_matrix(np.round(NN_pred).argmax(axis=1), y_encoded.argmax(axis=1))"
    ]
   },
   {
