--- a/shallow_models/shallow_classification.ipynb
+++ b/shallow_models/shallow_classification.ipynb
@@ -99,9 +99,10 @@
     "best_acc = 0\n",
     "best_C = None\n",
     "\n",
+    "# Making a grid for kernel could also improve accuracy\n",
     "for i in range(7):\n",
     "    clf_SVC = SVC(C=C_value)\n",
-    "    clf_SVC.fit(X_train, y_train) # Limited to 5000 to save on computing power\n",
+    "    clf_SVC.fit(X_train, y_train)\n",
     "    SVC_pred = clf_SVC.predict(X_test)\n",
     "    acc = accuracy_score(SVC_pred, y_test)\n",
     "\n",
